Added nicer flash message, added full name to users

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="bg-image"></div>
+<div class="HomePageSignupForm BaseSignupForm continue_with_text">
+    <div class="logo"></div>
+    <div class="tagline">
+        <h2>The best answer to any question</h2>
+    </div>
+</div>
+<div class="login-content">
+    
+</div>
