--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,9 @@
-<h2>Forgot your password?</h2>
+<div class="margin-top-50">
+    <div class="logo"></div>
+    <div class="tagline">
+        <h2>The best answer to any question</h2>
+    </div>
+</div>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
