--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.margin-top-50{
+    margin-top: 50px;
+}
+
+.logo{
+    float: none;
+    margin: auto;
+    width: 160px;
+    height: 100px;
+    background-size: 160px 45px;
+    background-image: url(//qsf.is.quoracdn.net/-images.logo.wordmark_default.svgf0fecd31dbaf49fa.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 56px;
+}
+
+
+.tagline{
+    float: none;
+    text-align: center;
+    margin-left: 16px;
+    margin-top: 10px;
+    margin-bottom: 16px;
+    font-size: 19px;
+    line-height: 1.3;
+    color: rgba(175,175,175,0.95);
+    -webkit-font-smoothing: antialiased;
+}
+
+.flash-message {
+  &.error {
+          background-color: #FF6565;
+        }
+  &.notice {
+          background-color: #A4E7A0;
+        }
+  text-align: center;
+  color: #333333;
+  z-index: 999;
+  position: fixed;
+  width: 96%;
+  margin: 20px;
+        p {
+                font-size: 110%;
+                margin: 15px 0;
+        }
+}
