--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,23 @@
 <body>
 
 <%= render 'layouts/navbar' %>
-<%= yield %>
+  <% if notice || alert %>
+  <div class="flash-message <%= notice ? "notice" : ""%><%= alert ? "error" : ""%>">
+    <div class="container container_12 clearfix">
+      <div class="grid_12">
+        <% if notice %>
+          <p><%= notice %></p>
+        <% elsif alert %>
+          <p><%= alert %></p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+<% end %>
+<div class="container">
+  <%= yield %>  
+</div>
+
 
 </body>
 </html>
