--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,5 +10,7 @@
   <%= @question.content %>
 </p>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
+<% if can? :edit, @question %>
+  <%= link_to 'Edit', edit_question_path(@question) %> 
+<% end %>
 <%= link_to 'Back', questions_path %>
