--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,17 +1,29 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+<div class="margin-top-50">
+    <div class="logo"></div>
+    <div class="tagline">
+        <h2>The best answer to any question</h2>
+    </div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+  
+      <div class="form-inputs">
+        <%= f.input :full_name, required: true, autofocus: true %>
+        <%= f.input :email, required: true, autofocus: true %>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+        <%= f.input :password_confirmation, required: true %>
+      </div>
+    
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up" %>
+      </div>
+  <% end %>
+  
+  <%= render "users/shared/links" %>    
   </div>
+</div>
+    
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "users/shared/links" %>
